alchemycoaching.client/src/app/our-coaches/our-coaches.component.scss
@import '../../style-variables.scss';

body {
  background-image: url('background.jpg');
  background-attachment: fixed;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  overflow: auto;
  min-height: calc(100lvh - 50px);
}


.coaches-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 20px;
  padding-top: 60px;
  backdrop-filter: brightness(80%) contrast(60%);
  background: rgba($dark, .4);
  padding-bottom: 20px;
}

.coach-container {
  border: $medium 5px solid;
  border-radius: 15px;
  max-width: 900px;
  overflow: hidden;
  margin: 10px;
}

.coach-header {
  background-color: $medium;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.coach-title {
  color: $light;
  font-size: 24px;
  padding: 4px;
  flex: auto;
}

.coach-content {
  display: flex;
  justify-content: flex-start;
  color: $dark;
  background-color: $light;
  flex-wrap: wrap;
}

.coach-image-container{
    width: 300px;
    height: 400px;
    background-color: transparent;
    flex: auto;
    display: flex;
    justify-content: center;
    
}
.coach-image {
  background-size: cover;
  background-repeat: no-repeat;
  background-position: top;
  height: 100%;
  width: 100%;
}

.coach-image.courtney {
  background-image: url('courtney-headshot.jpg');
}

.coach-image.tarni {
  background-image: url('tarni-headshot.jpg');
}

.coach-image.christina {
  background-image: url('christina-headshot.jpg');
}

.right-content {
  width: calc(100% - 300px);
  height: 100%;
  min-width: 400px;
  max-height: 400px;
  overflow: auto;
  display: flex;
  align-self: center;
  flex-direction: column;
  flex: auto;
}

@media (width < 550px){
    .right-content{
        max-height: 100%;
    }
}

.coach-description {
  color: $dark;
  vertical-align: middle;
  padding: 10px;
  overflow: auto;
  flex: auto;
}

.buttons-container {
    display: flex;
    gap: 10px;
    align-content: center;
    justify-content: center;
    margin: 10px;
    flex: auto;
    margin-top: 15px;
}

button {
  background-color: $medium;
  color: $light;
  border-radius: 50px;
  padding: 10px;
  padding-top: 5px;
  padding-bottom: 5px;
}

button:hover {
  color: white;
}

a {
  text-decoration: none;
  color: $light;
}

button:hover a{
    color: white;
}

